# FiNER-ORD

code/: pyproject.toml  serve_modal_example.py  serve_modal_ner.py
