[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["swiecki <daniel.swiecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
modal = "^0.64.109"
torch = "^2.4.1"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
